--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Firebase OC</string>
+    <string name="app_name">Easy Sokhona</string>
 
     <string name="main_activity_description">Discute avec tes mentors, tout simplement.</string>
 
